--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Ethereum Block Explorer</title>
+    <title>MIX content type explorer</title>
 
 </head>
 <body>
